2007-09-03 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 426: don't display warnings if a node is not a camera.
	
2007-08-28 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 425: Image data returned in the dc1394_video_frame_t struct was
	           read-only (Linux). It doesn't cost anything to make it
		   writable, so from now on you can overwite captured image
		   data. Thanks to Ferenc Kahlesz for the modification.

2007-08-23 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 424: - Change the split between dc1394_update_camera_info and
	             _dc1394_get_iidc_version so that getting the IIDC version
		     also gets the GUID at the same time. This reduces the
		     number of operations required to tell if a node is IIDC
		     compliant or not.
		   - dc1394camera_t member "euid_64"'s name changed to "guid"

2007-08-22 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 423: moved the include of config.h into internal.h
	* SVN 422: little fixes in the new camera detection API.
        * SVN 421: Reverted some changes concerning where #includes are placed.
	           This was changed for windows compatibility but breaks
		   compilation of programs using the library (on Linux).

2007-08-20 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 420: again, changes on the new camera detection API.

2007-08-16 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 419: more changes on the new camera detection API.
        * SVN 418: first changes on the new camera detection API.
	
2007-08-15 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 417: First alpha implementation of the new API for camera
	           detection. It consists in wrappers around existing
		   functions. An example (test_new_api) is provided to...
		   test this new API.
        * SVN 416: remove topology.c/h and raw1394support.h. This gets rid of
	           GPL files that were tainting the library license. Thanks to